# rtl-buddy-project-template

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  root_config.yaml
.github/workflows/: vcs.yml  verilator.yml
common/: lvm_core.sv  lvm_rpt.sv
design/: regression.yaml
design/cocotb_ex/: models.yaml  my_design.f  my_design.sv  test_module.f  test_module.sv
design/sandbox/: README.md  models.yaml  test_module.sv
design/template/: README.md  models.yaml  template_top.f  template_top.sv
spec/template/: README.md  specs.yaml
verif/cocotb_ex/: Makefile  README.md  run_verilator.zsh  tb_top.sv  test_my_design.py  test_runner.py  test_tb_top.py  tests.yaml
verif/sandbox/: tb_top.sv  tests.yaml
verif/template/: example_preproc.py  example_sweep.py  tb_top.sv  tests.yaml
